react-sandbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-sandbox
  namespace: react-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-sandbox
  template:
    metadata:
      labels:
        app: react-sandbox
    spec:
      containers:
        - name: react-sandbox
          image: medwards2009/react-sandbox:latest
          ports:
            - containerPort: 80
