react-sandbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-sandbox-service
  namespace: react-sandbox
spec:
  selector:
    app: react-sandbox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
