react-sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-sandbox-ingress
  namespace: react-sandbox
spec:
  ingressClassName: traefik
  rules:
    - host: michaelswebstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-sandbox-service
                port:
                  number: 80
    - host: www.michaelswebstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-sandbox-service
                port:
                  number: 80
  tls:
    - hosts:
        - michaelswebstuff.com
        - www.michaelswebstuff.com
      secretName: waittime-wizard-tls
